fix dark mode not working with prose class

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,4 +67,8 @@
   body {
     @apply bg-background text-foreground antialiased;
   }
+
+  .prose {
+    @apply dark:prose-invert;
+  }
 }
